Stop compose button from collapsing

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -12,7 +12,9 @@
 }
 
 #nav-bar .compose {
-  left: 450px;
+  display: inline-block;
+  left: 400px;
+  min-width: 150px;
   padding: 10px 0;
   position: absolute;
   top: 0;
@@ -34,6 +36,10 @@
   background-color: white;
   border: 1px solid black;
   color: black;
+}
+
+#nav-bar .compose .fa {
+  padding-right: 5px;
 }
 
 #nav-bar .compose.selected a {
